--- a/Inscription.Connexion.css
+++ b/Inscription.Connexion.css
@@ -7,6 +7,7 @@ h1
 {
     font-size: 40px; /* Titres de 40 pixels */
     font-size: bold;
+    margin-right: 50%
     
 }
 
@@ -17,6 +18,10 @@ h1
     color: black; /* Le texte de la page sera noir */
     float: left;
     width: 33%;
+    height: 60%;
+    position: absolute;
+    left: 10%;
+    top: 700px;
 }
 
 .Inscrip
@@ -25,7 +30,11 @@ h1
     background-color: #ea008a; /* Le fond de la page sera rose */
     color: black; /* Le texte de la page sera noir */
     float: right;
+    position: absolute;
     width: 33%;
+    right: 10%;
+    height: 60%;
+    top: 700px;
 }
 h2{
     margin: 60px
@@ -35,79 +44,134 @@ h2{
 
 nav
 {
+    border-width: 1px solid black;
+    background-color: black;
+}
+
+
+#menu li
+{
+ 
     display: inline-block;
-    width: 740px;
-    text-align: right;
+    font-size: 12px;
+    margin-right: 140px;
+    color: white;
+    
 }
 
-nav ul
+#menu a
 {
-    list-style-type: none;
-}
-
-nav li
-{
-    display: inline-block;
-    margin-right: 15px;
-}
-
-nav a
-{
-    font-size: 1.3em;
-    color: #181818;
-    padding-bottom: 3px;
+    color: white;
     text-decoration: none;
 }
-
-nav a:hover
+.pseu
 {
-    color: #760001;
-    border-bottom: 3px solid #760001;
+  margin-left: 37px;
+}
+.mdp
+{
+  margin-left: 12px;
+}
+
+.Conf
+{
+  margin-left: 11px;
+}
+.PSDO
+{
+  margin-left: 83px;
+}
+.Mail
+{
+  margin-left: 83px;
+}
+.recherche
+{
+    position: absolute;
+    margin-top: 370px;
+    margin-left: 750px;
+    color: red;
+   font-size: 16px;
+    
+}
+
+.recherche a /* Liens par défaut (non survolés) */
+{
+   text-decoration: none;
+   color:yellow;
+  
+  
+}
+
+.recherche a:hover /* Apparence au survol des liens */
+{
+   text-decoration: underline;
+   color: yellow;
 }
 
 
+
+
+
+.fond
+{
+    position: absolute;
+}
+
+
+#paris
+{
+  position: absolute;
+  
+}
+
+#even
+
+{
+    position: absolute;
+    top:3px;
+    left:0px;
+}
+
+.search
+
+{
+    position: absolute
+    left: 60px;
+}
+
+
+#searchbar
+{    position: absolute;
+    margin-top: 350px;
+    margin-left: 650px;
+    border-radius: 2em;
+    }
 footer
 {
-    display: inline-block;
-    width: 740px;
-    text-align: right;
+    border-width: 1% solid black;
+    background-color: black;
+    margin-top: 100%;
 }
 
-footer ul
-{
-    list-style-type: none;
-}
-
-footer li
+#fin li
 {
     display: inline-block;
-    margin-right: 15px;
+    font-size: 12px;
+    color: white;
 }
 
-footer a
-{
-    font-size: 1.3em;
-    color: #181818;
-    padding-bottom: 3px;
-    text-decoration: none;
+
+#fin a
+{ color: white;
+  text-decoration: none;
+  display: inline-block;
+  margin-right: 40px;
+  margin-left: 40px;
+    
+     
 }
 
-footer a:hover
+.fi
 {
-    color: #760001;
-    border-bottom: 3px solid #760001;
-}
-
-.Conect
-{
-    position: absolute;
-    left: 10%;
-    bottom: 20%;
-}
-
-.Inscrip
-{
-    position: absolute;
-    right: 10%;
-    bottom: 20%;
-}
+  margin-left: 250px;
