--- a/Inscription.Connexion.css
+++ b/Inscription.Connexion.css
@@ -7,7 +7,8 @@ h1
 {
     font-size: 40px; /* Titres de 40 pixels */
     font-size: bold;
-    margin-right: 50%
+    margin-left: 110px;
+    
     
 }
 
@@ -21,7 +22,7 @@ h1
     height: 60%;
     position: absolute;
     left: 10%;
-    top: 700px;
+    top: 600px;
 }
 
 .Inscrip
@@ -34,13 +35,15 @@ h1
     width: 33%;
     right: 10%;
     height: 60%;
-    top: 700px;
+    top: 600px;
 }
 h2{
-    margin: 60px
+    margin: 5px;
     text-align:justify;
     float: left;
 }
+
+
 
 nav
 {
@@ -64,6 +67,8 @@ nav
     color: white;
     text-decoration: none;
 }
+
+/* marge des champs de formulaire pour les aligner */
 .pseu
 {
   margin-left: 37px;
@@ -85,6 +90,39 @@ nav
 {
   margin-left: 83px;
 }
+
+.Mailco
+{
+  margin-left: 83px;
+}
+
+.Mdp
+{
+  margin-left: 83px;
+}
+.Rc
+{
+  margin-left: 83px;
+}
+
+
+
+
+
+
+/*pour les boutons "connexion" */
+.envoyerco
+{
+    margin-left: 180px;
+    
+}
+
+.envoyerins
+{
+    margin-left: 100px;
+}
+
+
 .recherche
 {
     position: absolute;
@@ -172,6 +210,15 @@ footer
      
 }
 
+body
+{
+    background-color:#aca8a8;
+
+}
+
+
+
 .fi
 {
   margin-left: 250px;
+}
