--- a/creer.css
+++ b/creer.css
@@ -1,17 +1,41 @@
 /*Code pour le menu*/
+
+body
+{
+    margin: xx auto ;
+    padding: 0;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
 #menu li
 {
  
     display: inline-block;
     font-size: 12px;
-    margin-right: 140px;
-    color: white;    
+    color: white;
+    position: relative;
+    margin-right: 112px;
 }
 
+.evt
+{
+    margin-left: 200px;
+}
 #menu a
 {
     color: white;
     text-decoration: none;
+}
+
+#menu
+{
+    border-width: 1px solid black;
+    background-color: black;
+   
+    
 }
 
 nav
@@ -20,13 +44,6 @@ nav
     background-color: black;
 }
 
-/*Code pour le fond de la page
-body
-{
-  background: url('Fonds/fond5.jpg');
-}*/
-
-/*Code pour l'en-tête*/
 .fond
 {
     position: absolute;
@@ -42,30 +59,64 @@ body
 
 {
     position: absolute;
-    top: 0px;
-    left: 0px;
+    top:2px;
+    left:10px;
+    z-index: 5;
 }
 
-.champ
+
+#searchbar
 {   position: absolute;
-    margin-top: 15px;
-    margin-left: 950px;
-    width: 270px; 
+    margin-top: 260px;
+    margin-left: 565px;
     height: 80px;
+    z-index: 5;
     }
 
-.search
+
+#search
 {
-  position: absolute;
-  margin-top: 5px;
-  margin-left: 1220px;
+    border-radius: 2em;
+    width: 392px;
+    height: 34px;
+    border-style:solid;
+    border-width: 1px;
+    font-size: 15px;
+    letter-spacing: 1px;
+    padding: 5px 10px 5px 10px;
 }
 
-.avancee
+#search-btn{
+    height: 30px;
+    width: 100px;
+    color: white;
+    background-color: #EA008A;
+    
+}
+
+.recherche
 {
-  position: absolute;
-  margin-top: 35px;
-  margin-left: 1102px;
+    position: absolute;
+    margin-top: 350px;
+    margin-left: 889px;
+    
+   font-size: 20px;
+    
+}
+
+.recherche a /* Liens par défaut (non survolés) */
+{
+   text-decoration: none;
+   color:yellow;
+    font-size: 15px;
+  
+  
+}
+
+.recherche a:hover /* Apparence au survol des liens */
+{
+  text-decoration: underline;
+   color: yellow;
 }
 
 /*Code pour la section de la page*/
@@ -229,9 +280,40 @@ h5
     margin-top: 5%;
     margin-left: 40%;
 }
-/* Bouton envoyer le formulaire*/
+/* Bouton envoyer le formulaire */
 .bouton_envoi
 {
   margin-top: 10%;
   margin-left: 45%;
+}
+
+/* Code pour le footer */
+footer
+{
+    border-width: 1px solid black;
+    background-color: black;
+  
+}
+
+#fin li
+{
+    display: inline-block;
+    font-size: 12px;
+    color: white;
+}
+
+
+#fin a
+{ color: white;
+  text-decoration: none;
+  display: inline-block;
+  margin-right: 40px;
+  margin-left: 40px;
+    
+     
+}
+
+.fi
+{
+  margin-left: 250px;
 }
