--- a/even2bien.css
+++ b/even2bien.css
@@ -1,5 +1,12 @@
-
-
+body
+{
+    margin: xx auto ;
+    padding: 0;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
 
 #menu li
 {
